# skillplotter

./: .gitignore  .readthedocs.yaml  .sonarcloud.properties  README.md  mkdocs.yml  pyproject.toml  skillist.py
.github/workflows/: linting.yml  publish.yml
docs/: development.md  index.md  requirements.txt  usage.md
docs/css/: extra.css
docs/overrides/: main.html
github/workflows/: publish.yml
skill_plotter/: main.py  plotter.py  preparator.py  utils.py
