[tool.poetry]
name = "skill-plotter"
version = "0.3.1"
description = "CLI tool to generate a plot of your skills"
authors = ["Andre Wohnsland <50302161+AndreWohnsland@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "skill_plotter" }]
keywords = ["skill", "plot", "cli", "tool", "cv", "resume"]
homepage = "https://skillplotter.readthedocs.io/"
documentation = "https://skillplotter.readthedocs.io"
repository = "https://github.com/AndreWohnsland/skillplotter"

[tool.poetry.scripts]
skill-plotter = "skill_plotter.main:app"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
matplotlib = "^3.8.2"
typer = { extras = ["all"], version = "^0.9.0" }
pandas = "^2.2.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
jupyterlab = "^4.0.11"
mkdocs-material = "^9.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
